<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">POPULAR MOVIES</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="Build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_artist_search">ArtistSearchActivity</string>

    <string name="title_activity_popular_movies">PopularMoviesActivity</string>
    <string name="title_activity_movie_details_view">MovieDetailsViewActivity</string>
    <string name="pref_select_sort_type">Select sorting type</string>
    <string name="pref_sort_type">Sorting by</string>
    <string name="pref_sort_default">vote_average.desc</string>
    <string name="title_popular_movies_settings_activity">Popular Movie app Settings</string>

    <string name="details_view_no_release_date">No release date</string>
    <string name="details_view_no_description">No description</string>
    <string name="details_view_text_minutes">min</string>
    <string name="details_view_text_vote_average_divider">/10</string>
    <string name="popular_movies_activity_text_conection_error">Can not load the data from remote service</string>
    <string name="network_not_available_message">Network is not available</string>
    <string name="title_activity_popular_movies_universal">Popular Movies</string>
    <string name="title_activity_details_view_universal">Details</string>

</resources>
